syntax = "proto3";
package go_grcp_yt;
option go_package = "pb/pagination";

message Pagination {
    uint64 total = 1;
    uint32 per_page = 2;
    uint32 curent_page = 3;
    uint32 last_page = 4;
}